force-app/main/default/objects/KT_OCR_Job__c/KT_OCR_Job__c.object-meta.xml
<CustomObject>
    <description>OCR processing job submitted to the configured provider. Links uploaded documents to raw extraction JSON, mapped fields, confidence, and HR review status.</description>
    <label>KT OCR Job</label>
    <nameField>
        <displayFormat>OCR-{000000}</displayFormat>
        <label>OCR Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KT OCR Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>