force-app/main/default/objects/KT_OCR_Job__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <description>Overall confidence score returned by the provider.</description>
    <label>Confidence Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>