force-app/main/default/objects/KT_OCR_Job__c/fields/Document_Type_Detected__c.field-meta.xml
<CustomField>
    <fullName>Document_Type_Detected__c</fullName>
    <description>Provider classification of the document, such as Passport or Driver License.</description>
    <label>Document Type Detected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>