force-app/main/default/objects/KT_OCR_Job__c/fields/Extracted_Fields__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Fields__c</fullName>
    <description>Structured key-value pairs after mapping through KT_OCR_FieldMapping__mdt.</description>
    <label>Extracted Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>