force-app/main/default/objects/KT_OCR_Job__c/fields/Extracted_JSON__c.field-meta.xml
<CustomField>
    <fullName>Extracted_JSON__c</fullName>
    <description>Raw JSON response from OCR provider, retained for debugging and reprocessing.</description>
    <label>Extracted JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>