force-app/main/default/objects/KT_OCR_Job__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <description>Provider-assigned job or operation id for async polling.</description>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>