force-app/main/default/objects/KT_OCR_Job__c/fields/KT_DocumentVault__c.field-meta.xml
<CustomField>
    <fullName>KT_DocumentVault__c</fullName>
    <description>Source document being OCR-processed.</description>
    <label>KT Document Vault</label>
    <referenceTo>KT_DocumentVault__c</referenceTo>
    <relationshipLabel>OCR Jobs</relationshipLabel>
    <relationshipName>OCRJobs</relationshipName>
    <type>MasterDetail</type>
</CustomField>