force-app/main/default/objects/KT_OCR_Job__c/fields/KT_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>KT_Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent onboarding record for reporting and downstream updates.</description>
    <label>KT Onboarding</label>
    <referenceTo>KT_Onboarding__c</referenceTo>
    <relationshipLabel>OCR Jobs</relationshipLabel>
    <relationshipName>OCRJobs</relationshipName>
    <type>Lookup</type>
</CustomField>