force-app/main/default/objects/KT_OCR_Job__c/fields/OCR_Provider__c.field-meta.xml
<CustomField>
    <fullName>OCR_Provider__c</fullName>
    <description>OCR provider populated from active custom metadata configuration at job creation.</description>
    <label>OCR Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>AWS Textract</fullName><default>true</default><label>AWS Textract</label></value>
            <value><fullName>Azure Form Recognizer</fullName><default>false</default><label>Azure Form Recognizer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>