force-app/main/default/objects/KT_OCR_Job__c/fields/Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Review_Notes__c</fullName>
    <description>HR Admin notes recorded during OCR review before acceptance or rejection.</description>
    <label>Review Notes</label>
    <type>TextArea</type>
</CustomField>