force-app/main/default/objects/KT_OCR_Job__c/fields/Reviewed_At__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_At__c</fullName>
    <description>Timestamp of the HR review decision.</description>
    <label>Reviewed At</label>
    <type>DateTime</type>
</CustomField>