force-app/main/default/objects/KT_OCR_Job__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>HR Admin who accepted or rejected the OCR extraction.</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reviewed OCR Jobs</relationshipLabel>
    <relationshipName>ReviewedOCRJobs</relationshipName>
    <type>Lookup</type>
</CustomField>